# rs-proc-gen-experiment

./: Cargo.toml
res/asset-definitions/: test.yaml
res/item-types/: test.yaml
resource_specs/: assets.yaml  item-types.yaml
src/: asset_loader.rs  camera.rs  drop_tables.rs  equipment.rs  fpa.rs  fpavec.rs  input.rs  inventory.rs  item.rs  main.rs  math_util.rs  sys_anim.rs  sys_control.rs  sys_death_drop.rs  sys_health.rs  sys_lifetime.rs  sys_match_anim.rs  sys_on_hit.rs  sys_phys.rs  sys_pickup.rs  sys_set_equipment.rs  sys_track_pos.rs  ui.rs  vec.rs
src/comp/: alliance.rs  coll.rs  control.rs  death.rs  health.rs  mod.rs
src/comp/visual/: camera.rs  fx.rs  mod.rs
src/item/: deser_structs.rs  mod.rs
src/renderer/: frag.glsl  frame_sets.rs  mod.rs  paint_sys.rs  tex_key.rs  vert.glsl
src/renderer/atlas/: bin_packer.rs  charset.rs  frame_set.rs  mod.rs  sprite_sheet.rs
src/renderer/paint_sys/: mod.rs  ui_inventory.rs
src/sys_control/: mod.rs  slime_ai.rs
src/ui/: inventory.rs  mod.rs
